--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -3823,7 +3823,7 @@
      "text": [
       "<>:8: SyntaxWarning: invalid escape sequence '\\['\n",
       "<>:8: SyntaxWarning: invalid escape sequence '\\['\n",
-      "/var/folders/66/hjdps8cj0sd_nt4v35d18wzc0000gn/T/ipykernel_4424/95665047.py:8: SyntaxWarning: invalid escape sequence '\\['\n",
+      "/var/folders/66/hjdps8cj0sd_nt4v35d18wzc0000gn/T/ipykernel_5946/95665047.py:8: SyntaxWarning: invalid escape sequence '\\['\n",
       "  usa_states_sub.state.replace(to_replace='\\[.*\\]', value='', regex=True, inplace=True)\n"
      ]
     },
@@ -4541,15 +4541,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A file already exists with this name.\n",
-      "\n"
+      "Directory ../data was created.\n",
+      "Writing file.  \"../data/ski_data_cleaned.csv\"\n"
      ]
     }
    ],
@@ -4561,9 +4561,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing file.  \"../data/state_summary.csv\"\n"
+     ]
+    }
+   ],
    "source": [
     "# save the state_summary separately.\n",
     "datapath = '../data'\n",
@@ -4592,38 +4600,39 @@
     "\n",
     "In this notebook, I have performed data wrangling (and some EDA) on our original dataset to investigate the shape of our data, identify missingness, evaluate categorical features, investigate outliers, select a target feature, and apply other techniques to clean and prepare our data for modeling.\n",
     "\n",
-    "**Initial Data Exploration**\n",
+    "# Initial Data Exploration\n",
     "Our ski resort data, read from a CSV in the 'raw_data' folder had a shape of 330 rows and 27 columns. We confirmed that our ski resort of interest is present in the pandas DataFrame.\n",
     "\n",
-    "**Missingness**\n",
+    "# Missingness\n",
     "We evaluated columns and rows for missing values.\n",
     "Unfortunately, quite a few of the desired target features('AdultWeekday' and 'AdultWeekend' prices) were missing 15-16% of cases. We needed to decide what to do with rows missing values in these important columns.\n",
     "\n",
-    "    **Columns deleted**\n",
-    "    We dropped the 'fastEight' column because over 50% of its values were missing and it was of low importance for ticket price modeling. We also dropped 'AdultWeekday' as explained further below.\n",
+    "## Columns deleted\n",
+    "- We dropped the 'fastEight' column because over 50% of its values were missing and it was of low importance for ticket price modeling. \n",
+    "- We also dropped 'AdultWeekday' as explained further below.\n",
     "\n",
-    "    **Rows deleted**\n",
-    "    We had dropped about 14% of all rows -those with missing prices in both 'AdultWeekday' and 'AdultWeekend'. \n",
-    "    After selecting our target feature, we dropped all rows missing values in 'AdultWeekend'.\n",
+    "## Rows deleted\n",
+    "- We had dropped about 14% of all rows -those with missing prices in both 'AdultWeekday' and 'AdultWeekend'. \n",
+    "- After selecting our target feature, we dropped all rows missing values in 'AdultWeekend'.\n",
     "\n",
-    "**Categorical Features**\n",
+    "# Categorical Features\n",
     "We have three categorical features: name, state, Region. We investigated name for uniqueness and found one entry that exist twice, but the resort name is shared by two resorts in two different states(so all resorts are unique!). We also had to investigate the relationship between Region and state.\n",
     "\n",
-    "**Target Feature Selection**\n",
+    "# Target Feature Selection\n",
     "To decide on our target feature for modeling ticket price, we examined the relationship between weekday and weekend prices. A scatter plot showed a strong correlation, so we used only one of these features. We dropped the column with more missing values('AdultWeekday') and any rows missing 'AdultWeekend'.\n",
     "\n",
-    "**Outlier Handling**\n",
+    "# Outlier Handling\n",
     "We found one ski resort(Silverton Mountain) with an unusually large skiable terrain area.\n",
     "We cross-checked this value with other data sources and found it was much larger than the correct value. We also found an outlier in the 'yearsOpen' feature, likely due to a data entry error.\n",
     "We updated these values and continued with our analysis, noting these changes for further review.\n",
     "\n",
-    "**Furthermore**\n",
+    "# Furthermore\n",
     "We calculated state-level summary statistics for features important to ticket price modeling and added each state's population and area data from external sources.\n",
     "\n",
-    "**Other Issues**\n",
+    "# Other Issues\n",
     "Upon investigating missing values, we identified a pattern: the percentage of missing values per row appeared in multiples of 4 (0,4,8,...), suggesting missingness by design. We noted this for further investigation with our team. \n",
     "\n",
-    "**Summary:**\n",
+    "# Summary:\n",
     "We cleaned the original dataset by keeping only resorts with valid weeekend prices, corrected key errors, and dropped features with high missingness. 'AdultWeekend' is our target feature and our final clean dataset has 277 rows and 25 features. We saved both the final state summary and cleaned data to two different CSV files for use in modeling(the next step)."
    ]
   },
