Notebook 04, pre-processing and modelling

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -3823,7 +3823,7 @@
      "text": [
       "<>:8: SyntaxWarning: invalid escape sequence '\\['\n",
       "<>:8: SyntaxWarning: invalid escape sequence '\\['\n",
-      "/var/folders/66/hjdps8cj0sd_nt4v35d18wzc0000gn/T/ipykernel_5946/95665047.py:8: SyntaxWarning: invalid escape sequence '\\['\n",
+      "/var/folders/66/hjdps8cj0sd_nt4v35d18wzc0000gn/T/ipykernel_31743/95665047.py:8: SyntaxWarning: invalid escape sequence '\\['\n",
       "  usa_states_sub.state.replace(to_replace='\\[.*\\]', value='', regex=True, inplace=True)\n"
      ]
     },
@@ -4548,7 +4548,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directory ../data was created.\n",
+      "A file already exists with this name.\n",
+      "\n",
       "Writing file.  \"../data/ski_data_cleaned.csv\"\n"
      ]
     }
@@ -4568,6 +4569,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "A file already exists with this name.\n",
+      "\n",
       "Writing file.  \"../data/state_summary.csv\"\n"
      ]
     }
