--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -6043,7 +6043,9 @@
     "The Random Forest model has a lower cross-validation mean absolute error by almost \\\\$1 that of the Linear Regression model. The RF model also has a mean absolute error with a lower standard deviation than the Lin reg model, which indicates less variability. Given how consistent the Random Forest model performs on both the train set and test set; I have decided to use it as our model of choice. It also has a lower mean absolute error than linear regression.\n",
     "\n",
     "## Other steps\n",
-    "We wonder whether more data collection helps us to create a more robust model, but more data doesn't always mean better estimations and performance. We can use the learning function to check how performance relates to data set size as shown in the 4.12 section above."
+    "We wonder whether more data collection helps us to create a more robust model, but more data doesn't always mean better estimations and performance. We can use the learning function to check how performance relates to data set size as shown in the 4.12 section above.\n",
+    "\n",
+    "Note: Used Google Search, copilot to understand deeply some of the concepts and with formatting markdown."
    ]
   },
   {
